<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_menu_gallery"
            android:title="My Orders" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="My Cart" />
       
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:visible="false"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="Change Password" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>


</menu>
