<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d3d3">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRegister">

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/black"
            app:cardCornerRadius="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                tools:context=".MainActivity">

                <ImageView
                    android:id="@+id/tvReg"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center_horizontal"
                    android:src="@drawable/uflogo"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:padding="@dimen/margin_10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_boundary"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvReg"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_boundary"
                    android:hint="@string/address"
                    android:importantForAutofill="no"
                    android:inputType="textPostalAddress"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/edtName"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:maxLength="10"
                    android:background="@drawable/blue_boundary"
                    android:hint="@string/phone_number"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/edtAddress"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_boundary"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/edtPhone"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_boundary"
                    android:hint="@string/confirm_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtPassword"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/tvSelectGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/select_gender"
                    app:layout_constraintTop_toBottomOf="@+id/edtConfirmPassword" />

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="10dp"
                    android:layout_span="3"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/tvSelectGender">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/male" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/female" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/others" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tvSelectDocument"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:drawableStart="@drawable/ic_attach_file_black_24dp"
                    android:drawableLeft="@drawable/ic_attach_file_black_24dp"
                    android:gravity="center_vertical"
                    android:visibility="gone"
                    android:text="@string/select_document"
                    app:layout_constraintBottom_toTopOf="@+id/tvSignUpLink"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rgGender" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDocumentName"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:visibility="gone"
                    android:textColor="@android:color/holo_blue_dark"
                    app:layout_constraintBottom_toTopOf="@+id/tvSignUpLink"
                    app:layout_constraintStart_toEndOf="@+id/tvSelectDocument"
                    app:layout_constraintTop_toTopOf="@+id/tvSelectDocument" />

                <TextView
                    android:id="@+id/tvSignUpLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/already_a_member_sign_in"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSelectDocument" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </ScrollView>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/register" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/mProgressView"
        android:layout_centerInParent="true"/>
</RelativeLayout>