<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d3d3">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cvAddProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llButtons"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:background="@android:color/black"
        app:cardCornerRadius="5dp">


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_10">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/productImage"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/blue_boundary" />

                    <LinearLayout
                        android:id="@+id/llAddImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_add_primary_48dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_product_image" />
                    </LinearLayout>
                </RelativeLayout>

                <EditText
                    android:id="@+id/edtProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_boundary"
                    android:hint="@string/product_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvReg"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/edtProductPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_boundary"
                    android:hint="@string/product_price"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvReg"
                    tools:targetApi="o" />


                <EditText
                    android:id="@+id/edtProductSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_boundary"
                    android:hint="@string/size"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvReg"
                    tools:targetApi="o" />


                <EditText
                    android:id="@+id/edtDiscountPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_boundary"
                    android:hint="@string/discount_price"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvReg"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/edtProductPotCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_boundary"
                    android:hint="@string/pot_category"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/tvReg"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/edtProductPotSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_boundary"
                    android:hint="@string/pot_size"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="10dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/tvReg"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/edtProductPotPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_boundary"
                    android:hint="@string/pot_price"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="10dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/tvReg"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/edtProductDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_boundary"
                    android:hint="@string/product_description"
                    android:importantForAutofill="no"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvReg"
                    tools:targetApi="o" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdateProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/update" />

        <Button
            android:id="@+id/btnDeleteProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:text="@string/delete" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/mProgressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>