<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#aeaeae"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:id="@+id/rlProfileUpdate"
            android:visibility="gone"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#aeaeae"
            android:scaleType="centerCrop" />

        <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <!--android:id="@+id/user_profile_photo"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="150dp"-->
            <!--android:layout_below="@+id/header_cover_image"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="-80dp"-->
            <!--android:elevation="5dp"-->
            <!--android:padding="20dp"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:src="@drawable/profile"-->
            <!--app:civ_border_color="#FF000000"-->
            <!--app:civ_border_width="2dp" />-->

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_below="@+id/header_cover_image"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:paddingBottom="24dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile_photo"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp" />
            <EditText
                android:id="@+id/user_profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:visibility="gone"
                android:hint="Enter Name"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_below="@+id/profile_layout"
            android:orientation="vertical"
            android:padding="@dimen/padding_10">

            <EditText
                android:id="@+id/user_profile_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/blue_boundary"
                android:clickable="true"
                android:elevation="4dp"
                android:hint="@string/enter_name"
                android:padding="10dp" />

            <EditText
                android:id="@+id/user_profile_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/blue_boundary"
                android:clickable="true"
                android:elevation="4dp"
                android:hint="@string/enter_phone_number"
                android:padding="10dp" />


            <EditText
                android:id="@+id/user_profile_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/blue_boundary"
                android:clickable="true"
                android:elevation="4dp"
                android:hint="@string/enter_address"
                android:padding="10dp" />

            <EditText
                android:id="@+id/user_profile_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/blue_boundary"
                android:clickable="true"
                android:elevation="4dp"
                android:hint="@string/enter_location"
                android:padding="10dp" />


            <TextView
                android:id="@+id/tvSelectGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="10dp"
                android:text="@string/select_gender"
                app:layout_constraintTop_toBottomOf="@+id/edtConfirmPassword" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_column="0"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="10dp"
                android:layout_span="3"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tvSelectGender">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/female" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/others" />
            </RadioGroup>
        </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/update" />

    <ProgressBar
        android:id="@+id/mProgressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" />
</RelativeLayout>
